# reactor

./: Makefile  button.py  pyproject.toml  shell.nix
src/: main.py  reactor_display.py  reactor_kernel.py
src/reactor/: display.py  kernel.py  ui.py
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.tsx  Cell.tsx  Reactor.tsx  UI.tsx  cm_editor.css  index.css  messages.ts
