[tool.poetry]
name = "pyractor"
version = "0.1.0"
description = ""
authors = ["Max Gonzih <gonzih@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.3"
pydantic = "^1.10.2"
coloredlogs = "^15.0.1"
ipython = "^8.5.0"
ipykernel = "^6.15.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
